--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "license": "MIT",
   "devDependencies": {
     "cssnano": "^4.1.10",
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.26.5"
   },
   "dependencies": {
     "animejs": "^3.2.0"
+  },
+  "scripts": {
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   }
 }
